[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "conclib"
version = "0.0.3"
authors = [
    {name = "Armand McQueen", email = "armandmcqueen@gmail.com"},
]
description = "Python concurrency library extending Pykka."
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    'pykka == 4.0.1',
    'redis ~= 5.0.1',
    'pydantic ~= 2.5.2',
    'requests',
]

[project.optional-dependencies]
dev = [
    'ruff ~= 0.1.6',
    'flit ~= 3.9.0',
    'fastapi == 0.105.0',  # to use the example API server
    "uvicorn[all] ~= 0.24.0.post1",  # to use the example API server

]

[project.urls]
Home = "https://github.com/armandmcqueen/conclib"




